--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,18 @@
 {
 	"name": "Clueless Notes Codespace",
-	"dockerFile": "Dockerfile",
+	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
 		"ghcr.io/devcontainers/features/rust:1": {}
 	},
-  	"postCreateCommand": ""
+	"postCreateCommand": [
+        "sudo apt update",
+        "sudo apt install -y libwebkit2gtk-4.0-dev",
+        "sudo apt install -y build-essential",
+        "sudo apt install -y curl",
+        "sudo apt install -y wget",
+        "sudo apt install -y libssl-dev",
+        "sudo apt install -y libgtk-3-dev",
+        "sudo apt install -y libayatana-appindicator3-dev",
+        "sudo apt install -y librsvg2-dev"
+    ]
 }
