--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
         "sudo apt install -y libssl-dev",
         "sudo apt install -y libgtk-3-dev",
         "sudo apt install -y libayatana-appindicator3-dev",
-        "sudo apt install -y librsvg2-dev"
+        "sudo apt install -y librsvg2-dev",
+        "cargo install create-tauri-app"
     ]
 }
