--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
-	"name": "Clueless Notes Codespace",
-	"image": "mcr.microsoft.com/devcontainers/base:jammy",
-	"features": {
-		"ghcr.io/devcontainers/features/rust:1": {}
-	},
-	"postCreateCommand": [
+    "name": "Clueless Notes Codespace",
+    "image": "mcr.microsoft.com/devcontainers/base:jammy",
+    "features": {
+        "ghcr.io/devcontainers/features/rust:1": {}
+    },
+    "postCreateCommand": [
         "sudo apt update",
         "sudo apt install -y libwebkit2gtk-4.0-dev",
         "sudo apt install -y build-essential",
@@ -13,7 +13,6 @@
         "sudo apt install -y libssl-dev",
         "sudo apt install -y libgtk-3-dev",
         "sudo apt install -y libayatana-appindicator3-dev",
-        "sudo apt install -y librsvg2-dev",
-        "cargo install create-tauri-app"
+        "sudo apt install -y librsvg2-dev"
     ]
 }
