--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Clueless Notes Codespace",
-    "image": "mcr.microsoft.com/devcontainers/base:Ubuntu",
+    "image": "mcr.microsoft.com/devcontainers/base:debian",
     "features": {
         "ghcr.io/devcontainers/features/rust:1": {}
     },
