--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,14 +5,14 @@
         "ghcr.io/devcontainers/features/rust:1": {}
     },
     "postCreateCommand": [
-        "sudo apt update",
-        "sudo apt install -y libwebkit2gtk-4.0-dev",
-        "sudo apt install -y build-essential",
-        "sudo apt install -y curl",
-        "sudo apt install -y wget",
-        "sudo apt install -y libssl-dev",
-        "sudo apt install -y libgtk-3-dev",
-        "sudo apt install -y libayatana-appindicator3-dev",
-        "sudo apt install -y librsvg2-dev"
+        "sudo apt-get update",
+        "sudo apt-get install -y libwebkit2gtk-4.0-dev",
+        "sudo apt-get install -y build-essential",
+        "sudo apt-get install -y curl",
+        "sudo apt-get install -y wget",
+        "sudo apt-get install -y libssl-dev",
+        "sudo apt-get install -y libgtk-3-dev",
+        "sudo apt-get install -y libayatana-appindicator3-dev",
+        "sudo apt-get install -y librsvg2-dev"
     ]
 }
