--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,15 +4,5 @@
     "features": {
         "ghcr.io/devcontainers/features/rust:1": {}
     },
-    "postCreateCommand": [
-        "sudo apt-get update",
-        "sudo apt-get install -y libwebkit2gtk-4.0-dev",
-        "sudo apt-get install -y build-essential",
-        "sudo apt-get install -y curl",
-        "sudo apt-get install -y wget",
-        "sudo apt-get install -y libssl-dev",
-        "sudo apt-get install -y libgtk-3-dev",
-        "sudo apt-get install -y libayatana-appindicator3-dev",
-        "sudo apt-get install -y librsvg2-dev"
-    ]
+    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev"
 }
