--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,5 +8,6 @@ RUN sudo apt-get update && \
     libssl-dev \
     libgtk-3-dev \
     libayatana-appindicator3-dev \
-    librsvg2-dev \
-    nodejs
+    librsvg2-dev && \
+    nodejs && \
+    sudo npm install -g pnpm
