--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,10 @@
 {
-    "name": "Clueless Notes Codespace",
-    "features": {
-        "ghcr.io/devcontainers/features/rust:1": {}
-    },
-    "build": {
-        "dockerfile": "Dockerfile"
-    }
+  "name": "Clueless Notes Codespace",
+  "features": {
+    "ghcr.io/devcontainers/features/rust:1": {},
+    "ghcr.io/devcontainers-contrib/features/npm-package:1": {}
+  },
+  "build": {
+    "dockerfile": "Dockerfile"
+  }
 }
